kubernetes/main/platform/observability/grafana-instance/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/hostname: "grafana.dcunha.lab"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: default
  hostnames:
    - "grafana.dcunha.lab"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
